@startuml Diagramme de classe

!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define primary_key(x) <b>x</b>
!define foreign_key(x) <u>#x</u>
!define int_field(x) x : INT
!define text_field(x) x : TEXT
!define bucket(x) x : BUCKET
!define or_null(x) x : NULL
!define boolean_field(x) x : BOOLEAN
!define date_field(x) x : DATE

Table(Profile, "profile") {
    int_field(primary_key(profile_id))
    text_field(nickname)
}

Table(Room, "room") {
    int_field(primary_key(room_id))
    text_field(room_name)
    text_field(code)
    boolean_field(expired)
    int_field(vote_percentage_to_skip_music)
    int_field(nb_musics_in_waiting_list)
    int_field(maximal_room_participant)
    int_field(maximal_duration_of_music)
    boolean_field(can_vote)
    date_field(date)
    int_field(host_user_profile_id)
}

Table(RoomUsers, "room_users" ) {
    primary_key(int_field(foreign_key(room_id)))
    primary_key(text_field(foreign_key(profile_id)))
    boolean_field(banned)
}

Table(RoomMusics, "room_musics") {
    primary_key(int_field(foreign_key(room_id)))
    primary_key(int_field(foreign_key(music_id)))
    primary_key(int_field(position))
    int_field(foreign_key(profile_id))
    int_field(down_votes)
}

Table(Music, "music") {
    int_field(primary_key(music_id))
    text_field(music_name)
    music_artist : TEXT[]
    artwork : ARTWORK
}

Table(FriendList, "friends_list"){
    primary_key(int_field(foreign_key(user_profile1_id)))
    primary_key(int_field(foreign_key(user_profile2_id)))
}

Table(FriendsRequest, "friends_request"){
    primary_key(int_field(foreign_key(asker_user_profile_id)))
    primary_key(int_field(foreign_key(receiver_user_profile_id)))
    date_field(date_sent)
    date_field(expiration_date)
}

Table(StreamingService, "streaming_services"){
    primary_key(int_field(service_id))
    text_field(serviceName)
}

Table(BoundServices, "bound_services"){
    primary_key(int_field(foreign_key(service_id)))
    primary_key(int_field(foreign_key(user_profile_id)))
    text_field(platform_id)
    text_field(access_token)
    text_field(refresh_token)
    date_field(expires_in)
}

Table(UserProfile, "user_profile"){
    primary_key(int_field(user_profile_id))
    int_field(foreign_key(user_id))
    int_field(foreign_key(profile_id))
    text_field(username)
    avatar : AVATAR
}

Profile "0" -- "1" UserProfile : user_profile_id
RoomMusics "1" -- "1" Profile : profile_id
UserProfile "1" -- "*" FriendList : user_profile_id
UserProfile "1" -- "*" FriendsRequest : user_profile_id
RoomMusics "*" -- "1" Room : room_id
RoomMusics "*" -- "1" Music : music_id
RoomUsers "*" -- "1" Room : room_id
Room "1" -- "*" UserProfile : "host_user_profile_id"
UserProfile "*" -- BoundServices
StreamingService "*" -- BoundServices
RoomUsers "*" -- "1" Profile : profile_id

@enduml